discussion/kv_engine/158430/158430_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47197: Set user limits as part of database refresh [4/n]

Unfortunately ns_server isn't able to notify us in a proper way
when a users limit changed, but instead we're being told to
read the entire file and figure it out ourself (it could very
well just be that a new user was added to the system; a users
password change or a user being deleted).

To avoid any race conditions where users connect while we're
performing the update the new database gets installed, and then
we iterate over all of the users in the new database and tries
to update the user.

Any user connecting while we're updating the database will see
the new entry (if they haven't been inserted in the cache already)
and we'll make sure we update all exiting entries in the database.

Change-Id: I24385c32f8efd0925c9a5624a591f18ef19685e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-29 12:06:23.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 12:50:11.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10939/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22: error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                     ^~~~~~~~~~~~~~~~
                     servent
/usr/include/netdb.h:255:8: note: "servent" declared here
struct servent
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:40: error: no member named "getUser" in "servent" [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10939/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10939/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32535/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32535/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11646/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11646/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9603/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38158/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/560/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12531/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/546/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12712/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13064/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20613/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
